k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boetro-blog
  labels:
    app: boetro-blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: boetro-blog
  template:
    metadata:
      labels:
        app: boetro-blog
    spec:
      containers:
        - name: boetro-blog
          image: ghcr.io/boetro/boetro.com:main-72ab63c8f68398962214c0191bbcaeaefe0c0357
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
