k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boetro-blog-service
  labels:
    app: boetro-blog
spec:
  selector:
    app: boetro-blog
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
